<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/white"
              android:padding="8dp"
              android:layout_marginBottom="8dp"
              android:elevation="2dp">

    <EditText
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_hour"
            android:inputType="number" />

    <EditText
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_minutes"
            android:inputType="number" />

    <EditText
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/interval_minutes"
            android:inputType="number" />

    <EditText
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_hour"
            android:inputType="number" />

    <EditText
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_minutes"
            android:inputType="number" />

    <EditText
            android:id="@+id/text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration"
            android:inputType="number" />
    <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:background="@color/button_red"/>
</LinearLayout>