<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/skyGray"
              android:gravity="center"
              android:fitsSystemWindows="true">
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/sky"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/overlay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onTestOverlayButtonClick"
        android:text="@string/test_overlay"/>

    <Button
        android:id="@+id/notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onTestNotificationButtonClick"
        android:text="@string/test_notification"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:id="@+id/listContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/addSetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_config"
            android:layout_marginTop="8dp"/>

    <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="8dp"/>
</LinearLayout>
